Add benchmark resources to CMake
Adds Resources.cmake script that:
- Verifies or downloads imagenet_mean.binaryproto location
- Verifies or downloads bvlc_reference_caffenet.caffemodel
- Verifies Caffe's cat.jpg test image
- Verifies deploy.prototxt of bvlc_reference_caffenet model

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ project(tiny-dnn-benchmark)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Defines MODEL_MEAN_PATH, MODEL_PATH, PROTO_PATH and TEST_IMAGE_PATH   
+include(cmake/Resources.cmake) 
+
 # Caffe's gtest config
 add_definitions(-DGTEST_USE_OWN_TR1_TUPLE=1 -DGTEST_HAS_TR1_TUPLE=1)
 include_directories(caffe/src)
