Switch to google-benchmark
- Adds bvlc_reference_caffenet benchmark stub
- Adds Caffe configuration for CPU C++ only build
- Adds Caffe image preprocessing to bvlc_reference_caffenet benchmark

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,14 +5,37 @@ project(tiny-dnn-benchmark)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Defines MODEL_MEAN_PATH, MODEL_PATH, PROTO_PATH and TEST_IMAGE_PATH   
-include(cmake/Resources.cmake) 
+# Locate own find_package CMake scripts
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-# Caffe's gtest config
-add_definitions(-DGTEST_USE_OWN_TR1_TUPLE=1 -DGTEST_HAS_TR1_TUPLE=1)
-include_directories(caffe/src)
+# Locate google-benchmark lib
+find_package(benchmark REQUIRED)
 
-# Add subdir CmakeLists
+# Configure and add Caffe 
+option(CPU_ONLY "" ON)
+option(BUILD_python "" OFF)
+option(BUILD_docs "" OFF)
+option(USE_LEVELDB "" OFF)
+option(USE_LMDB "" OFF)
 add_subdirectory(caffe)
+include_directories("${Caffe_SOURCE_DIR}/include"
+                    "${Caffe_BINARY_DIR}/include") # caffe.pb.h 
+
+# Copy Caffe's preprocessor defines to configure Caffe's internal headers 
+get_directory_property(CAFFE_DEFINITIONS DIRECTORY caffe COMPILE_DEFINITIONS)
+foreach( d ${CAFFE_DEFINITIONS} )
+  add_definitions(-D${d})
+endforeach()
+
+# Copy Caffe's include directories 
+get_directory_property(CAFFE_INCLUDE_DIRS DIRECTORY caffe INCLUDE_DIRECTORIES)
+foreach( d ${CAFFE_INCLUDE_DIRS} )
+  include_directories(${d})
+endforeach()
+
+# Add tiny-dnn
 add_subdirectory(tiny-dnn)
-add_subdirectory(tests)
+#include_directories(${tiny_dnn_SOURCE_DIR})
+
+# Add tiny-dnn benchmarks
+add_subdirectory(benchmarks)
