Switch to google-benchmark submodule

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,9 +8,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Locate own find_package CMake scripts
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-# Locate google-benchmark lib
-find_package(benchmark REQUIRED)
-
 # Configure and add Caffe 
 option(CPU_ONLY "" ON)
 option(BUILD_python "" OFF)
@@ -33,9 +30,13 @@ foreach( d ${CAFFE_INCLUDE_DIRS} )
   include_directories(${d})
 endforeach()
 
+# Configure and google-benchmark
+option(BENCHMARK_ENABLE_TESTING "" OFF)
+option(BENCHMARK_USE_LIBCXX "" ON)
+add_subdirectory(google-benchmark)
+
 # Add tiny-dnn
 add_subdirectory(tiny-dnn)
-#include_directories(${tiny_dnn_SOURCE_DIR})
 
 # Add tiny-dnn benchmarks
 add_subdirectory(benchmarks)
